samples/_failures_safe/1761488080_5d58bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a5fb28f.c: In function ‘main’:
./samples/SAFE/__tmp_5a5fb28f.c:155:5: error: expected expression at end of input
  155 |     graph_add_edge(&g, b, c,
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_5a5fb28f.c:155:5: error: expected declaration or statement at end of input
